--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,8 @@
 *.su
 *.idb
 *.pdb
+
+#Pico SDK & build files
+pico/pico_workspace/pico-sdk/*
+pico/pico_workspace/build/*
+pico/pico_workspace/CMakeFiles/*
