Fixed gitignore file. CMake still not working when trying to build UART though. ASK ANTHONY!

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,9 @@
 *.pdb
 
 #Pico SDK & build files
-pico/pico_workspace/pico-sdk/*
-pico/pico_workspace/build/*
+pico/pico_workspace/uart/CMakeFiles/*
 pico/pico_workspace/CMakeFiles/*
+pico/pico_workspace/build/*
+*/*/pico-sdk/*
+*/*.make
+*/*.cmake
